finished mvvm model

--- a/ForkliftManager/MainWindow.xaml
+++ b/ForkliftManager/MainWindow.xaml
@@ -3,15 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ForkliftManager"
+        xmlns:v="clr-namespace:ForkliftManager.MVVM.View"
+        xmlns:vm="clr-namespace:ForkliftManager.MVVM.ViewModel"
+        xmlns:m="clr-namespace:ForkliftManager.MVVM.Model"
         mc:Ignorable="d"
         Title="MainWindow" Height="550" Width="910"
         WindowStyle="None"
         Background="Transparent"
         AllowsTransparency="True"
-        WindowStartupLocation="CenterScreen"
-        >
-
+        WindowStartupLocation="CenterScreen">
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
     <Border Background="#2e3136" CornerRadius="20">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -33,15 +36,18 @@
             <StackPanel Grid.Row="1">
 
                 <RadioButton Height="50"
-                             Content="Auftrag aufgeben"
+                             Content="Create Pallet"
                              IsChecked="True"
-                             Style="{StaticResource RadioButtonCustomStyle}"/>
+                             Command="{Binding CreatePalletCommand}"/>
                 <RadioButton Height="50"
-                             Content="Paletten"/>
+                             Content="Pallet List"
+                             Command="{Binding PalletListCommand}"/>
                 <RadioButton Height="50"
-                             Content="Lieferung"/>
+                             Content="Delivery"
+                             Command="{Binding DeliverCommand}"/>
             </StackPanel>
-            <ContentControl Margin="10"  Grid.Column="1" Grid.Row="1" />
+            <ContentControl Margin="10"  Grid.Column="1" Grid.Row="1" Content="{Binding CurrentView}"/>
+            
         </Grid>
     </Border>
 </Window>
