--- a/ForkliftManager/MVVM/View/PalletList.xaml
+++ b/ForkliftManager/MVVM/View/PalletList.xaml
@@ -4,9 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ForkliftManager.MVVM.View"
+             xmlns:vm="clr-namespace:ForkliftManager.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <vm:PalletListViewModel/>
+    </UserControl.DataContext>
     <Grid>
-            
+        <ListView>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="Auto" Header="Palettennummer" DisplayMemberBinding="{Binding PalletNumber}"/>
+                    <GridViewColumn Width="Auto" Header="Hallennummer" DisplayMemberBinding="{Binding HallNumber}"/>
+                    <GridViewColumn Width="Auto" Header="Zielhallennummer" DisplayMemberBinding="{Binding TargetHallNumber}"/>
+                    <GridViewColumn Width="Auto" Header="Palettengröße" DisplayMemberBinding="{Binding PalletSize}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </UserControl>
