--- a/ForkliftManager/App.xaml
+++ b/ForkliftManager/App.xaml
@@ -2,47 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ForkliftManager"
+             xmlns:viewModel="clr-namespace:ForkliftManager.MVVM.ViewModel" xmlns:view="clr-namespace:ForkliftManager.MVVM.View"
              StartupUri="MainWindow.xaml"
-             xmlns:viewModel="clr-namespace:ForkliftManager.MVVM.ViewModel"
-             xmlns:view="clr-namespace:ForkliftManager.MVVM.View"
              >
     <Application.Resources>
-        <DataTemplate DataType="{x:Type viewModel:CreatePalletViewModel}">
-            <view:CreatePallet/>
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type viewModel:DeliverViewModel}">
-            <view:Deliver/>
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type viewModel:PalletListViewModel}">
-            <view:PalletList/>
-        </DataTemplate>
-        <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="{x:Type RadioButton}">
-            <Style.Setters>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="RadioButton">
-                            <Grid VerticalAlignment="Stretch"
-                              HorizontalAlignment="Stretch"
-                              Background="{TemplateBinding Background}">
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
 
-                                <TextBlock VerticalAlignment="Center"
-                                       Margin="30,0,0,0"
-                                       FontSize="16"
-                                       Text="{TemplateBinding Property=Content}"/>
-                            </Grid>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-                <Setter Property="Background" Value="Transparent"/>
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Foreground" Value="White"/>
-            </Style.Setters>
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+            
+            <DataTemplate DataType="{x:Type viewModel:PlaceOrderViewModel}">
+                <view:PlaceOrderView/>
+            </DataTemplate>
 
-            <Style.Triggers>
-                <Trigger Property="IsChecked" Value="True">
-                    <Setter Property="Background" Value="#6c757d"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
