i came, i tried, i learned something, im leaving

--- a/ForkliftManager/MainWindow.xaml
+++ b/ForkliftManager/MainWindow.xaml
@@ -55,12 +55,14 @@
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Style="{StaticResource MenuButtonTheme}"/>
+                             Style="{StaticResource MenuButtonTheme}"
+                             Command="{Binding PalletListViewCommand}"/>
                 <RadioButton Content="Delivery"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Style="{StaticResource MenuButtonTheme}"/>
+                             Style="{StaticResource MenuButtonTheme}"
+                             Command="{Binding DeliveryViewCommand}"/>
 
             </StackPanel>
 
