--- a/ForkliftManager/App.xaml
+++ b/ForkliftManager/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="ForkliftManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ForkliftManager"
              xmlns:viewModel="clr-namespace:ForkliftManager.MVVM.ViewModel" xmlns:view="clr-namespace:ForkliftManager.MVVM.View"
              StartupUri="MainWindow.xaml"
              >
@@ -14,11 +13,18 @@
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
-            
+
             <DataTemplate DataType="{x:Type viewModel:PlaceOrderViewModel}">
                 <view:PlaceOrderView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:PalletListViewModel}">
+                <view:PalletList/>
+            </DataTemplate>
+
+            <!--<DataTemplate DataType="{x:Type viewModel:DeliveryViewModel}">
+                <view:DeliveryView/>
+            </DataTemplate>-->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
