--- a/ForkliftManager/MVVM/View/PlaceOrderView.xaml
+++ b/ForkliftManager/MVVM/View/PlaceOrderView.xaml
@@ -3,11 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ForkliftManager.MVVM.View"
+             xmlns:local="clr-namespace:ForkliftManager.MVVM.View" xmlns:local1="clr-namespace:ForkliftManager.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="#9999">
+    <UserControl.DataContext>
+        <local1:PlaceOrderViewModel/>
+    </UserControl.DataContext>
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Vertical">
+            <Label Content="Pallet Number" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBox Background="White" Width="180" Height="30"  Text="{Binding Num}"/>
+            <Label Content="Hall Number" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBox Background="White" Width="180" Height="30"  Text="{Binding Hall}"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1">
+            <Label Content="Target Hall Number" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBox Background="White" Width="180" Height="30"  Text="{Binding TargetHall}"/>
+            <Label Content="Pallet Size" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBox Background="White" Width="180" Height="30" Text="{Binding Size}"/>
+        </StackPanel>
+        <Button Content="Palette Add" Width="150" Height="30" Grid.ColumnSpan="2" Command="{Binding addPallet}" Cursor="Hand"/>
     </Grid>
 </UserControl>
+    
